MacOS support in Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,17 @@
 language: crystal
 
+os:
+  - linux
+  - osx
+
 script:
   - crystal spec
   - crystal tool format --check
+
+before_install:
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew update         ; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install crystal; fi
+
+jobs:
+  allow_failures:
+    - os: osx
